[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
oauth2 = "4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11.5"
shuttle-actix-web = "0.47.0"
shuttle-runtime = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "macros",
] }
migration = { path = "./migration" }
sqlx = "0.7.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v7"] }
chrono = "0.4.38"

[workspace]
members = [".", "migration"]
